T011. pt1.Configuracion de ServletLogin.java

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,8 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>8.0</version>
+            <version>${jakartaee}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     
